--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Configuración básica del proyecto
-sonar.projectKey=taller_de_sis_inf
-sonar.projectName=taller de sis inf
+sonar.projectKey=taller_de_sis_inf_mejorado
+sonar.projectName=taller de sis inf mejorado
 sonar.projectVersion=1.0
 
 # Módulos del proyecto
@@ -19,4 +19,4 @@ BACKEND.sonar.exclusions=**/node_modules/**,**/dist/**,**/coverage/**,**/.git/**
 # Configuración general
 sonar.sourceEncoding=UTF-8
 sonar.host.url=http://localhost:9000
-sonar.login=squ_5abe5d7bbe10679a55428428f61b4275f0ca5284
+sonar.login=squ_1006b812824bcd75aee94c6ea887298b4b5200fd
